# garmi-head

./: .copier-answers.yml  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml  tmp.py
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
docs/api/: garmi_head.rst
examples/: test.py
include/: control.h
src/: control.cpp  main.cpp
src/garmi_head/: __init__.py  __init__.pyi  control.pyi
tests/: test_compiled.py  test_package.py
